Create Cloud Run preview revisions on each commit

--- a/.github/workflows/google-cloudrun-api-docker.yml
+++ b/.github/workflows/google-cloudrun-api-docker.yml
@@ -58,7 +58,9 @@ env:
   GAR_LOCATION: us-central1 # TODO: update Artifact Registry location
   GAR_REPO: stream-player-images
   SERVICE: api # TODO: update Cloud Run service name
-  REGION: YOUR_SERVICE_REGION # TODO: update Cloud Run service region
+  REGION: us-central1 # TODO: update Cloud Run service region
+  BUCKET: stream-player-audio-files-bucket
+  POSTGRES_HOST: postgres-db.us-central1-c.c.stream-player-374604.internal
 
 jobs:
   deploy:
@@ -107,14 +109,23 @@ jobs:
 
       # END - Docker auth and build
 
-      #- name: Deploy to Cloud Run
-      #  id: deploy
-      #  uses: google-github-actions/deploy-cloudrun@v0
-      #  with:
-      #    service: ${{ env.SERVICE }}
-      #    region: ${{ env.REGION }}
-      #    # NOTE: If using a pre-built image, update the image name here
-      #    image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}
+      - name: Deploy Preview Revision to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v1
+        with:
+          service: ${{ env.SERVICE }}
+          region: ${{ env.REGION }}
+          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPO }}/${{ env.SERVICE }}:latest
+          tag: latest
+          no_traffic: true
+          env_vars: |
+            BUCKET=${{ env.BUCKET }}
+            POSTGRES_HOST=${{ env.POSTGRES_HOST }}
+          secrets: |
+            POSTGRES_USER=POSTGRES_USER:1
+            POSTGRES_PASSWORD=POSTGRES_PASSWORD:1
+            POSTGRES_DB=POSTGRES_DB:1
+          flags: '--execution-environment=gen2 --max-instances=4 -min-instances=0 --port=8080 --vpc-connector=api-connector --service-acount=fs-identity@stream-player-374604.iam.gserviceaccount.com --platform=managed'
 
       ## If required, use the Cloud Run url output in later steps
       #- name: Show Output
