--- a/.github/workflows/google-cloudrun-web-player-docker.yml
+++ b/.github/workflows/google-cloudrun-web-player-docker.yml
@@ -58,7 +58,8 @@ env:
   GAR_LOCATION: us-central1 # TODO: update Artifact Registry location
   GAR_REPO: stream-player-images
   SERVICE: web-player # TODO: update Cloud Run service name
-  REGION: YOUR_SERVICE_REGION # TODO: update Cloud Run service region
+  REGION: us-central1 # TODO: update Cloud Run service region
+  REACT_APP_PROXY_HOST: https://latest---api-6zcf3l4wpa-uc.a.run.app
 
 jobs:
   deploy:
@@ -107,14 +108,18 @@ jobs:
 
       # END - Docker auth and build
 
-      #- name: Deploy to Cloud Run
-      #  id: deploy
-      #  uses: google-github-actions/deploy-cloudrun@v0
-      #  with:
-      #    service: ${{ env.SERVICE }}
-      #    region: ${{ env.REGION }}
-      #    # NOTE: If using a pre-built image, update the image name here
-      #    image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}
+      - name: Deploy Preview Revision to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v1
+        with:
+          service: ${{ env.SERVICE }}
+          region: ${{ env.REGION }}
+          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPO }}/${{ env.SERVICE }}:latest
+          tag: latest
+          no_traffic: true
+          env_vars: |
+            REACT_APP_PROXY_HOST=${{ env.REACT_APP_PROXY_HOST }}
+          flags: '--max-instances=4 -min-instances=0 --port=3000 --platform=managed'
 
       ## If required, use the Cloud Run url output in later steps
       #- name: Show Output
