Build Cloud Run preview revisions based on sha, just in case

--- a/.github/workflows/google-cloudrun-web-player-docker.yml
+++ b/.github/workflows/google-cloudrun-web-player-docker.yml
@@ -114,7 +114,7 @@ jobs:
         with:
           service: ${{ env.SERVICE }}
           region: ${{ env.REGION }}
-          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPO }}/${{ env.SERVICE }}:latest
+          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPO }}/${{ env.SERVICE }}:${{ github.sha }}
           tag: latest
           no_traffic: true
           env_vars: |
