--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
     build:
       context: ./server
       dockerfile: Dockerfile.dev
-    #env_file:
-    #  - ./server/.env
+    env_file:
+      - ./server/.env
     depends_on:
       - db
     ports:
