--- a/.github/workflows/google-cloudrun-web-player-docker.yml
+++ b/.github/workflows/google-cloudrun-web-player-docker.yml
@@ -119,7 +119,7 @@ jobs:
           no_traffic: true
           env_vars: |
             REACT_APP_PROXY_HOST=${{ env.REACT_APP_PROXY_HOST }}
-          flags: '--max-instances=4 --min-instances=0 --port=3000 --platform=managed'
+          flags: '--max-instances=4 --min-instances=0 --port=3000 --service-account=web-player@stream-player-374604.iam.gserviceaccount.com --platform=managed'
 
       ## If required, use the Cloud Run url output in later steps
       #- name: Show Output
